# ChromGP

./: .gitignore  CLAUDE.md  DATA.md  PIPELINE.md  README.md  mcools  pyproject.toml  setup.py
chromgp/: __init__.py  __main__.py  cli.py  config.py  generate.py  models.py  simulations.py  utilities.py
chromgp/commands/: __init__.py  analyze.py  figures.py  generate.py  preprocess.py  train.py
chromgp/datasets/: __init__.py  base.py  chromhmm.py  gc.py  hic.py  preprocessed.py
configs/4DNFIXP4QG5B/: general.yaml  lcgp.yaml  mggp_lcgp.yaml  mggp_svgp.yaml  svgp.yaml
configs/4DNFIXP4QG5B_10k/: general.yaml
configs/4DNFIXP4QG5B_chr19/: general.yaml
configs/4DNFIXP4QG5B_chr9/: general.yaml
docs/: chromhmm.md
notebooks/: Bottom Up approach.ipynb  ChromGP Process.ipynb  ChromGP SVGP Different shapes.ipynb  ChromGP SVGP Multiple cylinders.ipynb  ChromGP WSVGP Single Chrom Final.ipynb  MGGP GPLVM.ipynb  Polymer 2016.ipynb  hg38.fa  hg38.fa.fai  hg38_gc_cov_15kb.tsv  simulate_grid.ipynb  simulate_grid_MGGP.ipynb  simulate_sponge_MGGP.ipynb
scripts/: plot_region.py
