[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chromgp"
version = "0.1.0"
description = "Deep Gaussian Processes for inferring 3D chromatin structure from Hi-C data"
readme = "README.md"
license = {text = "GPL-2.0-only"}
authors = [
    {name = "Luis Chumpitaz Diaz", email = "luis.chumpitazdiaz@gladstone.ucsf.edu"},
]
keywords = [
    "chromatin",
    "hi-c",
    "gaussian-processes",
    "3d-genome",
    "variational-inference",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.14"
dependencies = [
    # torch capped below 2.11 — PyPI default for 2.11 is +cu130, which is too
    # new for the system NVIDIA driver (max CUDA 12.8). 2.10.x default is +cu128.
    "torch>=2.0.0,<2.11",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "plotly>=5.0.0",
    "tqdm>=4.65.0",
    "Pillow>=10.0.0",
    "cooler>=0.9.0",
    "cooltools>=0.7.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "pysam>=0.22.0",
    # Note: gpzoo and bioframe installed separately as editable from sibling repos
]

[project.scripts]
chromgp = "chromgp.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
]

[project.urls]
Homepage = "https://github.com/luisdiaz1997/ChromGP"
Repository = "https://github.com/luisdiaz1997/ChromGP"

[tool.setuptools.packages.find]
include = ["chromgp*"]
